--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.7.0"
+    "grunt-contrib-cssmin": "~0.7.0",
+    "grunt-autoprefixer": "~0.4.2"
   }
 }
